<resources>
    <string name="app_name">MessageAppFamily</string>
    <string name="digiteEmail">Digite seu Email</string>
    <string name="digSenha">Digite sua senha</string>
    <string name="bLogar">Logar</string>
    <string name="txtCadastrar">Não tem conta? Cadastre-se</string>
    <string name="salvar_loginesenha">Lembrar login e senha? </string>
    <string name="cadastro_nome">Digite seu nome</string>
    <string name="cadastro_email">Digite seu email</string>
    <string name="cadastro_senha">Digite sua senha</string>
    <string name="cadastro_repitir_senha">Confirme sua senha</string>
    <string name="cadastro_bt_cadastrar">Cadastrar</string>
    <string name="menu_pesquisa">Pesquisar</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mesagem_configuracao">\"Esse não é seu nome nem sua senha. Esse nome ficará visivel para seus contatos do MessageApp</string>
</resources>